--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-
+<body>
+<div data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 		<div class="container">
@@ -1373,6 +1373,7 @@
 
 	<script src="js/main.js"></script>
 
+	</div>
 </body>
 
 </html>
