added the social media profiles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-<div data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+<div data-spy="scroll" data-target=".site-navbar-target" data-offset="300" >
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 		<div class="container">
@@ -1279,18 +1279,17 @@
 	<footer class="ftco-footer ftco-section">
 		<div class="container">
 			<div class="row mb-5">
-				<!-- <div class="col-md">
+				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">About</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts.</p>
+						<p>My portfolio showcases my proficiency in above mentioned skills, gained through industry experience. I believe in continuous learning and staying updated with the latest trends in software industry.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.linkedin.com/in/ravinkumarrakholiya/"><span class="icon-linkedin"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.facebook.com/ravin.rakholiya.3"><span class="icon-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.instagram.com/ravin__98/"><span class="icon-instagram"></span></a></li>
 						</ul>
 					</div>
-				</div> -->
+				</div>
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4 ml-md-4">
 						<h2 class="ftco-heading-2">Links</h2>
