changed mvp devlopment to backend development

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 							<i class="flaticon-ideas"></i>
 						</span>
 						<div class="desc">
-							<h3 class="mb-5">MVP Development</h3>
+							<h3 class="mb-5">Backend Development</h3>
 						</div>
 					</a>
 				</div>
@@ -1325,8 +1325,8 @@
 							<ul>
 								<li><span class="icon icon-map-marker"></span><span class="text">256, Oak St, Windsor, ON, Canada, N9A 5E3</span></li>
 								<li><a href="tel://15199914003"><span class="icon icon-phone"></span><span class="text">+1 (519) 991 4007</span></a></li>
-								<li><a href="mailto:ravinkumarrakh@gmail.com"><span class="icon icon-envelope"></span><span
-											class="text">ravinrakholiya559@gmail.com</span></a></li>
+								<li><a href="mailto:ravinkumarrakh@gmail.com"><span class="icon icon-envelope"></span>  <span
+											class="text">   ravinrakholiya559@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
