--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<div class="text">
 								<span class="subheading">Hello!</span>
 								<h1 class="mb-4 mt-3">I'm a <span>software engineer</span> based in Canada</h1>
-								<p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#"
+								<p><a href="https://api.whatsapp.com/send?phone=15199914007&text=Hello Ravin! I saw your profile, We would like to discuss further." class="btn btn-primary py-3 px-4">Hire me</a> <a href="#"
 										class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 							</div>
 						</div>
